# pytekswift

./: MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
.github/workflows/: semgrep.yml
tekswift/: __init__.py  cli.py  dataloader.py  utils.py
tekswift/data/: bn.yml  bq.yml  cd.yml  ci.yml  cw.yml  fk.yml  fm.yml  ir.yml  kn.yml  kp.yml  kr.yml  la.yml  lc.yml  md.yml  mh.yml  mk.yml  mo.yml  mp.yml  mq.yml  ms.yml  nc.yml  nr.yml  pm.yml  ps.yml  pw.yml  re.yml  ru.yml  sb.yml  sc.yml  sh.yml  sr.yml  st.yml  sx.yml  sy.yml  tc.yml  to.yml  tv.yml  tw.yml  tz.yml  va.yml  (+8 more)
