[metadata]
name = pytekswift
version = attr: tekswift.__version__
license = GPLV3
author = Tralah M Brian
author_email = musyoki.brian@tralahtek.com
description= "Database and Utilities for SWIFT (The Society for Worldwide Interbank Financial Telecommunication), a network that enables financial institutions worldwide to send and receive information about financial transactions in a secure, standardized and reliable environment."
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/TralahM/pytekswift
licence_files = LICENSE


classifiers=
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 4 - Beta

    # Indicate who your project is intended for
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Topic :: Database
    Topic :: Software Development :: Libraries
    Topic :: System :: Shells
    Topic :: Utilities
    # Pick your license as you wish (should match "license" above)
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: Unix

keywords="development credit_cards database finance"
project_urls =
    source= https://github.com/TralahM/pytekswift/
    tracker= https://github.com/TralahM/pytekswift/issues

[package_data]
data=tekswift.data

[options]
include_package_data = true
packages = find:

install_requires=
    PyYaml
    nltk
    shtab
    pycctek
    fuzzywuzzy
    "fuzzywuzzy[speedup]"

[options.entry_points]
console_scripts =
    tekswift = tekswift.cli:main
